# yellowdog-sdk-python-public

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
ci/: local-run  run
ci/steps/: build  deploy  validate_artifact_versions
docs/source/: account.rst  api.rst  cloud_info.rst  compute.rst  conf.py  images.rst  index.rst  model.rst  namespace.rst  object_store.rst  scheduler.rst  usage.rst
docs/source/_static/: custom.css
performance-tests/: task_upload_and_retrieval.py
scripts/: setup  test  test_socket_customizing_http_adapter.py
src/yellowdog_client/: __init__.py  _version.py  client_collection.py  platform_client.py
src/yellowdog_client/account/: __init__.py  account_client.py  account_client_impl.py  account_service_proxy.py  application_client.py  application_client_impl.py  application_service_proxy.py  keyring_client.py  keyring_client_impl.py  keyring_service_proxy.py
src/yellowdog_client/cloud_info/: __init__.py  cloud_info_client.py  cloud_info_client_impl.py  cloud_info_proxy.py
src/yellowdog_client/common/: __init__.py  check.py  closeable.py  countdown_event.py  full_jitter_retry.py  iso_datetime.py  pagination.py  proxy.py  search_client.py  slice_iterator.py  synchronized_predicated_runner.py  user_agent.py
src/yellowdog_client/compute/: __init__.py  compute_changed_event_data.py  compute_client.py  compute_client_impl.py  compute_requirement_helper.py  compute_requirement_instances_changed_event_listener.py  compute_requirement_instances_changed_event_listener_impl.py  compute_service_proxy.py  predicated_compute_subscription_event_listener.py
src/yellowdog_client/images/: __init__.py  images_client.py  images_client_impl.py  images_service_proxy.py  page.py  pageable.py  sort.py
src/yellowdog_client/model/: __init__.py  access_delegate.py  account.py  account_allowance.py  account_authentication_properties.py  account_policy.py  add_application_request.py  add_application_response.py  add_configured_worker_pool_request.py  add_configured_worker_pool_response.py  add_group_request.py  add_node_actions_request.py  add_user_request.py  add_user_response.py  aggregate_instance_usage_filter.py  alibaba_compute_source.py  alibaba_credential.py  alibaba_instance.py  alibaba_instance_charge_type.py  alibaba_instances_compute_source.py  alibaba_namespace_storage_configuration.py  alibaba_spot_strategy.py  all_nodes_inactive_shutdown_condition.py  all_workers_released_shutdown_condition.py  allowance.py  allowance_exhausted_notification.py  allowance_limit_enforcement.py  allowance_reset_type.py  allowance_search.py  api_key.py  application.py  application_details.py  application_search.py  attribute_constraint.py  attribute_definition.py  attribute_preference.py  attribute_source.py  attribute_source_type.py  attribute_value.py  authentication_provider.py  (+316 more)
src/yellowdog_client/namespaces/: __init__.py  namespaces_client.py  namespaces_client_impl.py  namespaces_service_proxy.py
src/yellowdog_client/object_store/: __init__.py  object_store_client.py  object_store_service_proxy.py  service_session_facade.py
src/yellowdog_client/scheduler/: __init__.py  predicated_work_subscription_event_listener.py  predicated_worker_pool_subscription_event_listener.py  work_client.py  work_client_impl.py  work_requirement_helper.py  work_service_proxy.py  worker_pool_client.py  worker_pool_client_impl.py  worker_pool_helper.py  worker_pool_service_proxy.py
src/yellowdog_client/usage/: __init__.py  allowances_client.py  allowances_client_impl.py  allowances_service_proxy.py
stubs/isodate/: __init__.pyi
tests/: conftest.py  test_application_client.py  test_client_collection.py  test_compute_client.py  test_fnmatch_utils.py  test_keyring_client.py  test_namespaces_client.py  test_object_store_client.py  test_platform_client.py  test_work_client.py  test_worker_pool_client.py
tests/common/: test_delegated_subscription_event_listener.py  test_full_jitter_retry.py  test_json.py  test_proxy.py  test_search_client.py  test_sse_stream.py  test_synchronized_predicated_runner.py
tests/common/credentials/: test_api_key_authentication_headers_provider.py  test_api_key_utils.py  test_requests_api_key_authentication.py
tests/common/server_sent_events/: test_subscription.py  test_subscription_manager.py
tests/model/: conftest.py  test_alibaba_credential.py  test_alibaba_instance.py  test_alibaba_instances_compute_source.py  test_all_workers_released_shutdown_condition.py  test_api_key.py  test_aws_credential.py  test_aws_instance.py  test_aws_on_demand_compute_source.py  test_aws_spot_compute_source.py  test_azure_client_credential.py  test_azure_instance.py  test_azure_instance_credential.py  test_azure_instances_compute_source.py  test_azure_scale_set_compute_source.py  test_compute_requirement.py  test_compute_requirement_summary.py  test_compute_requirement_template_summary.py  test_compute_requirement_template_usage.py  test_create_keyring_request.py  test_create_keyring_response.py  test_custom_exception.py  test_failure_policy.py  test_gce_instance.py  test_gce_instance_group_compute_source.py  test_gce_instances_compute_source.py  test_google_cloud_credential.py  test_keyring.py  test_keyring_accessor.py  test_keyring_credential.py  test_keyring_summary.py  test_no_registered_workers_shutdown_condition.py  test_oci_credential.py  test_oci_instance.py  test_oci_instance_pool_compute_source.py  test_oci_instances_compute_source.py  test_provisioned_worker_pool_properties.py  test_retry_policy.py  test_run_specification.py  test_selection.py  (+15 more)
tests/object_store/: test_service_session_facade.py
tests/object_store/utils/: test_background_thread.py  test_chunk_transfer_throttle.py  test_external_notification_dispatcher.py  test_file_utils.py  test_hash_utils.py  test_internal_notification_dispatcher.py  (+2 more)
tests/util/: api.py  data.py  waiter.py
tests/yellowdog_client_test/: fixtures.py
yellowdog-sdk-python-docs/: Dockerfile
(+115 files in other folders)
