[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yellowdog-sdk"
dynamic = ["version"]
authors = [
    { name = "YellowDog Limited", email = "support@yellowdog.co" }
]
description = "SDK for the YellowDog Platform"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'License :: OSI Approved :: Apache Software License'
]
dependencies = [
    "jsons>=1.4.0,<2",
    # 2.25.0 is the earliest version of requests that supports urllib3 1.26
    "requests>=2.25.0,<3",
    # This issue makes compatibility with urllib3 < 1.26 difficult: https://github.com/urllib3/urllib3/issues/2057
    "urllib3>=1.26.0,<2; python_version < '3.12'",
    # urllib3 is not compatible with python 3.12 until version 2.0.0
    "urllib3>=2.0.0,<3; python_version >= '3.12'",
    "python-dispatch==0.2.2",
    "cancel-token==0.1.6",
    "isodate>=0.6.1,<1"
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.3",
    "pytest-httpserver==1.0.8",
    "typing_compat==0.1.0",
    "busypie==0.5.1"
]
docs = [
    "sphinx==4.3.0",
    "sphinx-autodoc-typehints==1.12.0",
    "sphinx-automodapi==0.13"
]
deploy = [
    "twine==3.3.0"
]


[project.urls]
"Homepage" = "https://yellowdog.co"
"Source" = "https://github.com/yellowdog/yellowdog-sdk-python-public"

[tool.setuptools.dynamic]
version = { attr = "yellowdog_client._version.__version__" }
