[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yellowdog-sdk"
dynamic = ["version"]
authors = [
    { name = "YellowDog Limited", email = "support@yellowdog.co" }
]
description = "SDK for the YellowDog Platform"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'License :: OSI Approved :: Apache Software License'
]
dependencies = [
    "jsons>=1.4.0,<2",
    # 2.25.0 is the earliest version of requests that supports urllib3 1.26
    "requests>=2.25.0,<3",
    # This issue makes compatibility with urllib3 < 1.26 difficult: https://github.com/urllib3/urllib3/issues/2057
    "urllib3>=1.26.0,<2; python_version < '3.12'",
    # urllib3 is not compatible with python 3.12 until version 2.0.0
    "urllib3>=2.0.0,<3; python_version >= '3.12'",
    "python-dispatch==0.2.3",
    "cancel-token==0.1.6",
    "isodate>=0.6.1,<1"
]

[dependency-groups]
tests = [
    "pytest==8.3.3",
    "pytest-httpserver==1.0.8",
    "typing_compat==0.1.0",
    "busypie==0.5.1"
]
mypy = [
    "types-requests",
    "mypy==1.19.1"
]
docs = [
    "Sphinx==9.1.0",
    "sphinx-autodoc-typehints==3.6.2",
    "sphinx-automodapi==0.22.0",
    "sphinx-rtd-theme==3.1.0"
]
deploy = [
    "twine==6.2.0"
]
dev = [
    "tox"
]

[project.urls]
"Homepage" = "https://yellowdog.co"
"Source" = "https://github.com/yellowdog/yellowdog-sdk-python-public"

[tool.setuptools.dynamic]
version = { attr = "yellowdog_client._version.__version__" }

[tool.setuptools.package-data]
yellowdog_client = ["py.typed"]

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "src:stubs"
packages = ["yellowdog_client"]

[[tool.mypy.overrides]]
# These old abandoned dependencies are not typed. They need to be replaced but until then, we need tell mypy to ignore them.
module = ["jsons", "jsons.*", "pydispatch", "pydispatch.*", "typish", "typish.*"]
follow_imports = "skip"
ignore_missing_imports = true
